structure atelier pushée en post + @OPTIONS modifié ( void )

--- a/client/index.html
+++ b/client/index.html
@@ -104,7 +104,7 @@
                                     <h3 class="panel-title"><i class="fa fa-bar-chart-o fa-fw"></i> Liste des ateliers</h3>
                                 </div>
                                 <div class="panel-body">
-                                <button ng-click="callApi()">Call Api</button>
+                                <button ng-click="postData()">POST data</button>
                                 <br>
                                     <table class="table table-bordered table-hover table-striped text-center">
                                         <thead>
