DELETE method working

--- a/client/index.html
+++ b/client/index.html
@@ -104,7 +104,9 @@
                                     <h3 class="panel-title"><i class="fa fa-bar-chart-o fa-fw"></i> Liste des ateliers</h3>
                                 </div>
                                 <div class="panel-body">
-                                <button ng-click="postData()">POST data</button>
+                                Delete disabled (controllers.js)<br/>
+                                <button ng-click="postData()">POST data</button></br>
+                                <button ng-click="deleteData()">DELETE 1</button>
                                 <br>
                                     <table class="table table-bordered table-hover table-striped text-center">
                                         <thead>
