--- a/client/index.html
+++ b/client/index.html
@@ -106,7 +106,8 @@
                                 <div class="panel-body">
                                 Delete disabled (controllers.js)<br/>
                                 <button ng-click="postData()">POST data</button></br>
-                                <button ng-click="deleteData()">DELETE id = 1</button>
+                                <button ng-click="deleteData()">DELETE id = 1</button></br>
+                                <button ng-click="updateData()">UPDATE id = 1</button>
                                 <br>
                                     <table class="table table-bordered table-hover table-striped text-center">
                                         <thead>
