--- a/client/api.html
+++ b/client/api.html
@@ -69,7 +69,7 @@
         <!-- Page Content -->
         <div class="container" ng-app="atelierControllers">
 
-            <div class="row" ng-controller="apiCtrl">
+            <div class="row" ng-controller="apiCtrl" ng-cloak>
                 <div class="col-sm-6">
                     <div class="panel panel-{{left.class}}" ng-repeat="left in lefties">
                         <div class="panel-heading">
