--- a/client/index.html
+++ b/client/index.html
@@ -104,11 +104,6 @@
                                     <h3 class="panel-title"><i class="fa fa-bar-chart-o fa-fw"></i> Liste des ateliers</h3>
                                 </div>
                                 <div class="panel-body">
-                                Delete disabled (controllers.js)<br/>
-                                <button ng-click="postData()">POST data</button></br>
-                                <button ng-click="deleteData()">DELETE id = 1</button></br>
-                                <button ng-click="updateData()">UPDATE id = 1</button>
-                                <br>
                                     <table class="table table-bordered table-hover table-striped text-center">
                                         <thead>
                                             <tr>
@@ -117,6 +112,7 @@
                                                 <th>Thématique</th>
                                                 <th>Région géographique</th>
                                                 <th>Editer</th>
+                                                <th>Supprimer</th>
                                             </tr>
                                         </thead>
                                         <tbody>
@@ -126,6 +122,7 @@
                                                 <td>{{atelier.theme}}</td>
                                                 <td>{{atelier.location}}</td>
                                                 <td><button type="button" class="btn btn-default" ng-click="edit(atelier.id)">Editer</button></td>
+                                                <td><button type="button" class="btn btn-danger" ng-click="remove(atelier.id)">Supprimer</button></td>
 
                                             </tr>
                                         </tbody>
