--- a/client/ateliers.html
+++ b/client/ateliers.html
@@ -30,6 +30,9 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
         <![endif]-->
 
+        <link href="css/toastr.css" rel="stylesheet"/>
+        <script src="js/lib/toastr.js"></script>
+
         <script type="text/javascript" src="js/lib/angular.min.js"></script>
         <script type="text/javascript" src="js/lib/angular-resource.min.js"></script>
 
