--- a/client/index.html
+++ b/client/index.html
@@ -30,8 +30,8 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
         <![endif]-->
 
-        <link href="css/toastr.css" rel="stylesheet"/>
-        <script src="js/lib/toastr.js"></script>
+        <link href="css/toastr.min.css" rel="stylesheet"/>
+        <script src="js/lib/toastr.min.js"></script>
         
         <script type="text/javascript" src="js/lib/angular.min.js"></script>
         <script type="text/javascript" src="js/lib/angular-resource.min.js"></script>
